.provarCaches/00D5f000005vwGkEAI/objects/rstkf__brato__c.object
<CustomObject>
    <description>brato__c</description>
    <fields>
        <fullName>rstkf__brato_errormessage__c</fullName>
        <description>Error(s)</description>
        <inlineHelpText>Errors encountered when creating this BRATO record or when attempting to upload it in the Bank Statement Reconciliation process. Errors are hard, show-stopper problems that prevent the record from being uploaded. They must be fixed or worked around.</inlineHelpText>
        <label>Error(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_glaccount__c</fullName>
        <description>GL Account for Adjustment</description>
        <label>GL Account for Adjustment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_glbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank Account</description>
        <inlineHelpText>This is the bank account that is being reconciled.</inlineHelpText>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipName>bratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_glbankstmtd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uploaded to Statement Line</description>
        <inlineHelpText>Once this BRATO record has been uploaded, this field will be a link to the Bank Statement Line.</inlineHelpText>
        <label>Uploaded to Statement Line</label>
        <referenceTo>rstkf__glbankstmtd__c</referenceTo>
        <relationshipName>bratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_glbankstmth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uploaded to Statement</description>
        <inlineHelpText>Once this BRATO record has been uploaded, this field will be a link to the Bank Statement Header.</inlineHelpText>
        <label>Uploaded to Statement</label>
        <referenceTo>rstkf__glbankstmth__c</referenceTo>
        <relationshipName>bratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_hdrendingbal__c</fullName>
        <description>Ending Balance</description>
        <inlineHelpText>The balance (in the currency of the bank account) as reported by the bank as of the Statement Date.</inlineHelpText>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_hdrstmtdate__c</fullName>
        <description>Statement Date</description>
        <inlineHelpText>The official date of this bank statement. Always set by the bank (unless the statement being loaded is a dummy statement entered to initialize the bank account at go-live).</inlineHelpText>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Header fields?</description>
        <inlineHelpText>his field will be checked if this BRATO record contains fields that will be uploaded to the Bank Statement Header.</inlineHelpText>
        <label>Header fields?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_key__c</fullName>
        <description>Key</description>
        <inlineHelpText>This field uniquely identifies a single bank statement. A bank statement will almost always contain many lines and they will all share the same Key.</inlineHelpText>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Detailed line fields?</description>
        <inlineHelpText>This field will be checked if this BRATO record contains fields that will be uploaded to a Bank Statement Line.</inlineHelpText>
        <label>Detailed line fields?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lnbankamt__c</fullName>
        <description>Amount Reported by Bank</description>
        <inlineHelpText>The amount, in bank account currency, of the transaction as reported by the bank.</inlineHelpText>
        <label>Amount Reported by Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lncuststr__c</fullName>
        <description>Customer String</description>
        <inlineHelpText>Reserved for future use. When implemented it will be all or part of the NAME field of some Customer Company record, and will be used to create AR-related Rootstock Bank Account Transactions reported by the bank and not originating in Rootstock.</inlineHelpText>
        <label>Customer String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lnreference__c</fullName>
        <description>Bank&apos;s reference</description>
        <inlineHelpText>The bank’s identifying label for this particular transaction.</inlineHelpText>
        <label>Bank&apos;s reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lnsocustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer</description>
        <inlineHelpText>Reserved for future use. When implemented it will be a link to a Customer Company record, and will be used to create AR-related Rootstock Bank Account Transactions reported by the bank and not originating in Rootstock.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipName>bratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lntrandate__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>The date the bank has attached to this Bank Statement Line. Note that this will often be different than the date of the corresponding Rootstock Bank Account Transaction.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_lntrantype__c</fullName>
        <inlineHelpText>One of:
AP Check
AP EFT Payment…
AP ACH Payment
AP ACH/EFT Fees
AR Cash Deposit
AR ACH/EFT Payment…
Transfers/Adjustments…by JE
Bank Fees/Service Charges
Bank Reports Credit Card Deposit
Credit Card Processing Fee
Interest Income...</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP Check</fullName>
                </value>
                <value>
                    <fullName>AP EFT Payment (General)</fullName>
                </value>
                <value>
                    <fullName>AP ACH Payment</fullName>
                </value>
                <value>
                    <fullName>AP ACH/EFT Fees</fullName>
                </value>
                <value>
                    <fullName>AR Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>AR ACH/EFT Payment Reported by Bank</fullName>
                </value>
                <value>
                    <fullName>Transfers/Adjustments Made by JE</fullName>
                </value>
                <value>
                    <fullName>Bank Fees/Service Charges</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Deposit</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>All Other Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__brato_rawtrantype__c</fullName>
        <description>Raw Transaction Type</description>
        <inlineHelpText>Raw Transaction Type</inlineHelpText>
        <label>Raw Transaction Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_seq__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>The combination of Key and Sequence uniquely identifies a bank statement line.</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__brato_status__c</fullName>
        <description>Brato Status</description>
        <inlineHelpText>Brato Status</inlineHelpText>
        <label>Brato Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
                <value>
                    <fullName>Processed OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__brato_warningmessage__c</fullName>
        <description>Warning(s)</description>
        <inlineHelpText>Warnings about this BRATO record, created when an attempt is made to upload the record in the Bank Statement Reconciliation process. Warnings describe possible problems that are not serious enough to prevent the upload.</inlineHelpText>
        <label>Warning(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__brato_glbankacct__c + rstkf__brato_key__c + rstkf__brato_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Triggeroptions</description>
        <inlineHelpText>Triggeroptions</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Bank Account Reconcile Upload</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BRATO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Account Reconcile Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>